[gd_scene load_steps=14 format=2]

[ext_resource path="res://MainMenu/Canvas.png" type="Texture" id=1]
[ext_resource path="res://pixel/1x1pixel.png" type="Texture" id=2]
[ext_resource path="res://MainMenu/main_menu.gd" type="Script" id=3]
[ext_resource path="res://Font/Notepen.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://01_Sounds/MenuClick.wav" type="AudioStream" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float blur : hint_range(0, 6) = 0.5;

void fragment() {
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, blur);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
render_priority = -1
shader = SubResource( 1 )
shader_param/blur = 3.5

[sub_resource type="DynamicFont" id=3]
size = 89
outline_size = 11
outline_color = Color( 0.133333, 0.133333, 0.133333, 1 )
extra_spacing_bottom = -20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 43
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 47
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 58
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 44
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 4 )

[node name="MainMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="BlurTexture" type="TextureRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Canvas" type="Sprite" parent="."]
position = Vector2( 480, 270 )
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )

[node name="GameTitle" type="Label" parent="."]
margin_left = 211.0
margin_top = -8.0
margin_right = 762.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 3 )
text = "That's DELICIOUS!"
align = 1
valign = 1
autowrap = true

[node name="YourBest" type="Label" parent="."]
margin_left = 71.0
margin_top = 101.0
margin_right = 252.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 6 )
text = "Your best:"
align = 1
valign = 1
autowrap = true

[node name="YourBestScore" type="Label" parent="."]
margin_left = 53.0
margin_top = 183.0
margin_right = 278.0
margin_bottom = 263.0
custom_fonts/font = SubResource( 8 )
text = "0$"
align = 1
valign = 1
autowrap = true

[node name="PlayTextureButton" type="TextureButton" parent="."]
margin_left = 341.0
margin_top = 201.0
margin_right = 624.0
margin_bottom = 284.0

[node name="PlayLB" type="Label" parent="PlayTextureButton"]
margin_top = -2.0
margin_right = 283.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 5 )
text = "Play"
align = 1
valign = 1
autowrap = true

[node name="ResetTextureButton" type="TextureButton" parent="."]
margin_left = 396.0
margin_top = 300.0
margin_right = 569.0
margin_bottom = 349.0

[node name="ResetLB" type="Label" parent="ResetTextureButton"]
margin_top = 1.0
margin_right = 173.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 7 )
text = "Reset"
align = 1
valign = 1
autowrap = true

[node name="MenuClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 10.0
pitch_scale = 1.45

[node name="UsedFont" type="Label" parent="."]
margin_left = 702.0
margin_top = 481.0
margin_right = 992.0
margin_bottom = 550.0
custom_fonts/font = SubResource( 9 )
text = "Used font: Notepen"
align = 1
valign = 1
autowrap = true

[connection signal="pressed" from="PlayTextureButton" to="." method="_on_PlayTextureButton_pressed"]
[connection signal="pressed" from="ResetTextureButton" to="." method="_on_ResetTextureButton_pressed"]
